# vulweb

./: .gitignore  AI_CHAT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  requirements.txt  run.py  training_example.py
backend/app/: __init__.py
backend/app/api/: chat.py  datasets.py  models.py  training.py
backend/app/models/: __init__.py
backend/app/services/: ai_service.py  dataset_service.py  rag_service.py  training_service.py
backend/config/: config.py
backend/knowledge_base/: api_documentation.json  dataset_management.json  model_management.json  system_features.json  training_tasks.json  troubleshooting.json
backend/tests/: test_api.py  test_chat.py  test_rag.py
config/: config.ini
datasets/: README.md  sample_dataset.json
docs/: IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  USER_GUIDE.md  WSL_DEPLOYMENT.md
exp_platform/: .gitignore  README.md  app.py  pyproject.toml
exp_platform/adapters/: __init__.py  base.py  example_cmd.py
exp_platform/core/: __init__.py  executor.py  registry.py  schemas.py  utils.py
exp_platform/datasets/: __init__.py  base.py  example_toy.py
exp_platform/examples/: dummy_train.py
exp_platform/examples/data/: toy.csv
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.vue  main.js
logs/: README.md
models/: README.md
scripts/: install.sh  start.sh  stop.sh  verify.sh
(+21 files in other folders)
