[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulweb-experiment-platform"
version = "0.1.0"
description = "Model selection / training / evaluation and dataset management platform for vulnerability classification."
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.36.0",
  "pydantic>=2.8.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.1",
]

[tool.setuptools]
packages = ["exp_platform", "exp_platform.core", "exp_platform.adapters", "exp_platform.datasets"]
include-package-data = true
